fix(components): Fix shell-layout navigation spacing for tiled variant

--- a/packages/swirl-components/src/components/swirl-shell-layout/swirl-shell-layout.css
+++ b/packages/swirl-components/src/components/swirl-shell-layout/swirl-shell-layout.css
@@ -430,6 +430,12 @@
   }
 }
 
+.shell-layout--navigation-collapsed .shell-layout__secondary-nav-items--tiled {
+  & ::slotted(ul) {
+    gap: var(--s-space-16);
+  }
+}
+
 .shell-layout__secondary-nav-items--tiled {
   & ::slotted(ul > *) {
     flex-basis: calc(50% - var(--s-space-8));
